--- a/nextflow.config
+++ b/nextflow.config
@@ -89,14 +89,16 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
+        docker.runOptions      = "-v $baseDir:$baseDir"
     }
     singularity {
-        singularity.enabled    = true
-        singularity.autoMounts = true
-        docker.enabled         = false
-        podman.enabled         = false
-        shifter.enabled        = false
-        charliecloud.enabled   = false
+        singularity.enabled      = true
+        singularity.autoMounts   = true
+        docker.enabled           = false
+        podman.enabled           = false
+        shifter.enabled          = false
+        charliecloud.enabled     = false
+        process.containerOptions = "-B $baseDir"
     }
     podman {
         podman.enabled         = true
