--- a/conf/modules.config
+++ b/conf/modules.config
@@ -38,4 +38,129 @@ process {
         ]
     }
 
+    withName: BWAMEM1_MEM {
+        publishDir = [
+            path: { "${params.outdir}/preprocess/alignment" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: BWAMEM2_MEM {
+        publishDir = [
+            path: { "${params.outdir}/preprocess/alignment" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: TRIMGALORE {
+        publishDir = [
+            path: { "${params.outdir}/preprocess/trimming" },
+            mode: params.publish_dir_mode
+        ]
+        ext.args = '--illumina'
+    }
+
+    withName: SAMTOOLS_INDEX {
+        publishDir = [
+            path: { "${params.outdir}/preprocess/alignment" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: SAMTOOLS_SORT {
+        publishDir = [
+            path: { "${params.outdir}/preprocess/alignment" },
+            mode: params.publish_dir_mode
+        ]
+        ext.prefix = "sorted"
+    }
+
+    withName: SAMTOOLS_VIEW_SINGLE {
+        publishDir = [
+            path: { "${params.outdir}/exctracted_reads/single_unmapped" },
+            mode: params.publish_dir_mode
+        ]
+        ext.args = '-b -f 5 -F 256'
+    }
+
+    withName: SAMTOOLS_VIEW_BOTH {
+        publishDir = [
+            path: { "${params.outdir}/exctracted_reads/both_unmapped" },
+            mode: params.publish_dir_mode
+        ]
+        ext.args = '-b -f 13 -F 256'
+    }
+
+    withName: SAMTOOLS_FASTQ_SINGLE {
+        publishDir = [
+            path: { "${params.outdir}/converted_reads/single_unmapped" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: SAMTOOLS_FASTQ_BOTH {
+        publishDir = [
+            path: { "${params.outdir}/converted_reads/both_unmapped" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: PARSEOUTPUTS {
+        publishDir = [
+            path: { "${params.outdir}/parsed_integration_sites" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: KRAKEN2_SINGLE {
+        publishDir = [
+            path: { "${params.outdir}/classified/single_unmapped" },
+            mode: params.publish_dir_mode
+        ]
+        memory = 16.GB
+    }
+
+    withName: KRAKEN2_BOTH {
+        publishDir = [
+            path: { "${params.outdir}/classified/both_unmapped" },
+            mode: params.publish_dir_mode
+        ]
+        memory = 16.GB
+    }
+
+    withName: GAWK_SINGLE {
+        publishDir = [
+            path: { "${params.outdir}/collate_kraken/single_unmapped" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: GAWK_BOTH {
+        publishDir = [
+            path: { "${params.outdir}/collate_kraken/both_unmapped" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: KRONA_KTIMPORTTAXONOMY_SINGLE {
+        publishDir = [
+            path: { "${params.outdir}/krona_plot/single_unmapped" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: KRONA_KTIMPORTTAXONOMY_BOTH {
+        publishDir = [
+            path: { "${params.outdir}/krona_plot/both_unmapped" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: RANALYSIS {
+        publishDir = [
+            path: { "${params.outdir}/analysis_report" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
 }
