results folder structure and check modules config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -27,6 +27,11 @@ process {
     }
 
     withName: FASTQC {
+        publishDir = [
+            path: { "${params.outdir}/QC/fastqc" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
         ext.args = '--quiet'
     }
 
@@ -107,7 +112,7 @@ process {
 
     withName: PARSEOUTPUTS {
         publishDir = [
-            path: { "${params.outdir}/parsed_integration_sites" },
+            path: { "${params.outdir}/converted_reads/parsed_integration_sites" },
             mode: params.publish_dir_mode
         ]
     }
@@ -144,22 +149,30 @@ process {
 
     withName: KRONA_KTIMPORTTAXONOMY_SINGLE {
         publishDir = [
-            path: { "${params.outdir}/krona_plot/single_unmapped" },
+            path: { "${params.outdir}/results/single_unmapped" },
             mode: params.publish_dir_mode
         ]
     }
 
     withName: KRONA_KTIMPORTTAXONOMY_BOTH {
         publishDir = [
-            path: { "${params.outdir}/krona_plot/both_unmapped" },
+            path: { "${params.outdir}/results/both_unmapped" },
             mode: params.publish_dir_mode
         ]
     }
 
     withName: RANALYSIS {
         publishDir = [
-            path: { "${params.outdir}/analysis_report" },
+            path: { "${params.outdir}/results/analysis_report" },
             mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: MULTIQC {
+        publishDir = [
+            path: { "${params.outdir}/QC/multiqc" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
