--- a/nextflow.config
+++ b/nextflow.config
@@ -9,7 +9,6 @@
 // Global default params, used in configs
 params {
 
-    // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
 
@@ -17,6 +16,7 @@ params {
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
+    is_human                   = true // Set to false for non-human data
 
     // MultiQC options
     multiqc_config             = null
@@ -158,6 +158,7 @@ report {
 trace {
     enabled = true
     file    = "${params.tracedir}/execution_trace_${trace_timestamp}.txt"
+    fields = 'task_id,hash,native_id,process,tag,name,status,exit,module,container,cpus,time,disk,memory,attempt,submit,start,complete,duration,realtime,queue,%cpu,%mem,rss,vmem,peak_rss,peak_vmem,rchar,syscr,syscw,read_bytes,write_bytes'
 }
 dag {
     enabled = true
