polishing last configs for test

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,8 @@ params {
 
     // Input options
     input                      = null
+    krakendb                   = null
+    kronadb                    = null
 
     // References
     genome                     = null
