updated with schema and small refinements to configs

--- a/modules/local/gawk/meta.yml
+++ b/modules/local/gawk/meta.yml
@@ -1,11 +1,9 @@
-name: "local_cat"
-## TODO nf-core: Add a description of the module and list keywords
+name: "gawk"
 description: write your description here
 keywords:
   - sort
 tools:
   - "local":
-      ## TODO nf-core: Add a description and other details for the software below
       description: ""
       homepage: ""
       documentation: ""
@@ -13,23 +11,17 @@ tools:
       doi: ""
       licence: ""
 
-## TODO nf-core: Add a description of all of the variables used as input
 input:
-  #
-  ## TODO nf-core: Delete / customise this example input
   - bam:
       type: file
       description: BAM/CRAM/SAM file
       pattern: "*.{bam,cram,sam}"
 
-## TODO nf-core: Add a description of all of the variables used as output
 output:
-  #
   - versions:
       type: file
       description: File containing software versions
       pattern: "versions.yml"
-  ## TODO nf-core: Delete / customise this example output
   - bam:
       type: file
       description: Sorted BAM/CRAM/SAM file
