--- a/nextflow.config
+++ b/nextflow.config
@@ -18,7 +18,7 @@ params {
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
-    is_human                   = true // Set to false for non-human data
+    is_human                   = null
 
     // MultiQC options
     multiqc_config             = null
