fixed configs and schema

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,7 +18,10 @@ params {
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
-    is_human                   = null
+    is_human                   = true
+
+    // Run options
+    aligner                    = "bwa-mem"
 
     // MultiQC options
     multiqc_config             = null
