missing fasta param and gff

--- a/conf/test.config
+++ b/conf/test.config
@@ -25,6 +25,7 @@ params {
     // Genome references
     igenomes_ignore = true
     fasta           = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/chr21/sequence/genome.fasta'
+    gff             = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.gff3'
 
     // Classification databases
     krakendb = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/sarscov2/genome/db/kraken2.tar.gz'
