changed input parsing and added isbam parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ params {
     input                      = null
     krakendb                   = null
     kronadb                    = null
+    isbam                      = false
 
     // References
     genome                     = null
