--- a/conf/test.config
+++ b/conf/test.config
@@ -21,6 +21,7 @@ params {
 
     // Input data
     input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/hgtseq/testdata/csv/input_fastqs.csv'
+    isbam  = false
 
     // Genome references
     igenomes_ignore = true
