--- a/nextflow.config
+++ b/nextflow.config
@@ -20,6 +20,7 @@ params {
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
     is_human                   = true
+    gff                        = null
 
     // Run options
     aligner                    = "bwa-mem"
