--- a/conf/test.config
+++ b/conf/test.config
@@ -26,7 +26,7 @@ params {
     // Genome references
     igenomes_ignore = true
     fasta           = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/chr21/sequence/genome.fasta'
-    gff             = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.gff3'
+    gff             = 'https://raw.githubusercontent.com/nf-core/test-datasets/hgtseq/testdata/reference/Homo_sapiens.hg38.chr21.gff3'
 
     // Classification databases
     krakendb = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/sarscov2/genome/db/kraken2.tar.gz'
