adding trimgalore params

--- a/nextflow.config
+++ b/nextflow.config
@@ -25,6 +25,12 @@ params {
     // Run options
     aligner                    = "bwa-mem"
 
+    // Hard coded trimgalore params
+    clip_r1 = null
+    clip_r2 = null
+    three_prime_clip_r1 = null
+    three_prime_clip_r2 = null
+
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
