replace with original input

--- a/conf/test.config
+++ b/conf/test.config
@@ -20,7 +20,7 @@ params {
     max_time   = '6.h'
 
     // Input data
-    input  = '/home/shared_projects/tesi_simone_carpanzano/data_testing_pipeline/csv_input.csv'
+    input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/hgtseq/testdata/csv/input_fastqs.csv'
     isbam  = false
 
     // Genome references
