--- a/conf/modules.config
+++ b/conf/modules.config
@@ -13,10 +13,8 @@
 process {
 
     publishDir = [
-        path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-        mode: params.publish_dir_mode,
-        saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-    ]
+            enabled: false
+        ]
 
     withName: SAMPLESHEET_CHECK {
         publishDir = [
@@ -163,6 +161,14 @@ process {
         publishDir = [
             path: { "${params.outdir}/results/analysis_report" },
             mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: QUALIMAP_BAMQC {
+        publishDir = [
+            path: { "${params.outdir}/QC/qualimap" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
