fixed fastq outdir missing

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -24,9 +24,18 @@ process {
         ]
     }
 
-    withName: FASTQC {
+    withName: FASTQC_UNTRIMMED {
         publishDir = [
-            path: { "${params.outdir}/QC/fastqc" },
+            path: { "${params.outdir}/QC/fastqc_raw" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+        ext.args = '--quiet'
+    }
+
+    withName: FASTQC_TRIMMED {
+        publishDir = [
+            path: { "${params.outdir}/QC/fastqc_trimmed" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
