adding ext.args in krona module to specify taxID column

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -157,6 +157,7 @@ process {
             path: { "${params.outdir}/results/kronaplots/single_unmapped" },
             mode: params.publish_dir_mode
         ]
+        ext.args = '-t 3'
     }
 
     withName: KRONA_KTIMPORTTAXONOMY_BOTH {
@@ -164,6 +165,7 @@ process {
             path: { "${params.outdir}/results/kronaplots/both_unmapped" },
             mode: params.publish_dir_mode
         ]
+        ext.args = '-t 3'
     }
 
     withName: RANALYSIS {
