conditional multiqc on kraken if small test

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,6 +34,7 @@ params {
     multiqc_config             = null
     multiqc_title              = null
     max_multiqc_email_size     = '25.MB'
+    multiqc_runkraken          = true
 
     // Boilerplate options
     outdir                     = null
@@ -133,7 +134,10 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
     }
-    test      { includeConfig 'conf/test.config'      }
+    test      {
+        includeConfig 'conf/test.config'
+        params.multiqc_runkraken = false
+    }
     test_full { includeConfig 'conf/test_full.config' }
 }
 
