--- a/nextflow.config
+++ b/nextflow.config
@@ -139,6 +139,7 @@ profiles {
         params.multiqc_runkraken = false
     }
     test_full { includeConfig 'conf/test_full.config' }
+    test_bam { includeConfig 'conf/test_bam' }
 }
 
 // Load igenomes.config if required
