adding test_bam profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -139,7 +139,7 @@ profiles {
         params.multiqc_runkraken = false
     }
     test_full { includeConfig 'conf/test_full.config' }
-    test_bam { includeConfig 'conf/test_bam' }
+    test_bam { includeConfig 'conf/test_bam.config' }
 }
 
 // Load igenomes.config if required
