--- a/conf/test_bam.config
+++ b/conf/test_bam.config
@@ -20,7 +20,7 @@ params {
     max_time   = '6.h'
 
     // Input data
-    input  = '/home/shared_projects/tesi_simone_carpanzano/data_testing_pipeline/input_bam.csv'
+    input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/hgtseq/testdata/csv/input_bams.csv'
     isbam  = true
 
     // Genome references
