conditional chunk evaluation, disabled if test data in rmarkdown report

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,7 @@ params {
 
     // Run options
     aligner                    = "bwa-mem"
+    istest                     = false
 
     // Hard coded trimgalore params
     clip_r1 = null
