added kraken multiqc remove to test bam

--- a/nextflow.config
+++ b/nextflow.config
@@ -140,7 +140,10 @@ profiles {
         params.multiqc_runkraken = false
     }
     test_full { includeConfig 'conf/test_full.config' }
-    test_bam  { includeConfig 'conf/test_bam.config'  }
+    test_bam  {
+        includeConfig 'conf/test_bam.config'
+        params.multiqc_runkraken = false
+    }
 }
 
 // Load igenomes.config if required
