adding istest params to test_bam config file

--- a/conf/test_bam.config
+++ b/conf/test_bam.config
@@ -22,6 +22,7 @@ params {
     // Input data
     input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/hgtseq/testdata/csv/input_bams.csv'
     isbam  = true
+    istest = true
 
     // Genome references
     igenomes_ignore = true
