testing both fastq AND bam in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,12 @@ jobs:
           wget -qO- get.nextflow.io | bash
           sudo mv nextflow /usr/local/bin/
 
-      - name: Run pipeline with test data
+      - name: Test with FASTQ
         run: |
           nextflow run ${GITHUB_WORKSPACE} -profile test,docker --outdir ./results
+
+      - name: Test with BAM
+        run: |
+          nextflow run ${GITHUB_WORKSPACE} -profile test_bam,docker --outdir ./results
 
 #
