preparing inputs for aws full test - except full dbs

--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -22,11 +22,14 @@ params {
     max_time   = '6.h'
 
     // Input data
-    input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/hgtseq/testdata/csv/input_fastqs.csv'
+    input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/hgtseq/testdata/csv/input_aws_fastqs.csv'
+    isbam  = false
+    istest = true
 
     // Genome references
     igenomes_ignore = true
     fasta           = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/chr21/sequence/genome.fasta'
+    gff             = 'https://raw.githubusercontent.com/nf-core/test-datasets/hgtseq/testdata/reference/Homo_sapiens.hg38.chr21.gff3'
 
     // Classification databases
     krakendb = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/sarscov2/genome/db/kraken2.tar.gz'
