--- a/conf/modules.config
+++ b/conf/modules.config
@@ -100,6 +100,7 @@ process {
             path: { "${params.outdir}/preprocess/converted_reads/single_unmapped" },
             mode: params.publish_dir_mode
         ]
+        ext.args = '-n'
     }
 
     withName: SAMTOOLS_FASTQ_BOTH {
@@ -107,6 +108,7 @@ process {
             path: { "${params.outdir}/preprocess/converted_reads/both_unmapped" },
             mode: params.publish_dir_mode
         ]
+        ext.args = '-n'
     }
 
     withName: PARSEOUTPUTS {
