changed conditionals for indexing and updated iGenomes references

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -42,6 +42,14 @@ process {
         ]
     }
 
+    withName: 'BWAMEM1_INDEX' {
+        ext.when = { !params.bwaindex && params.aligner == "bwa-mem" }
+    }
+
+    withName: 'BWAMEM2_INDEX' {
+        ext.when = { !params.bwamem2index && params.aligner == "bwa-mem2" }
+    }
+
     withName: BWAMEM1_MEM {
         publishDir = [
             path: { "${params.outdir}/preprocess/alignment" },
