--- a/conf/modules.config
+++ b/conf/modules.config
@@ -178,6 +178,9 @@ process {
     }
 
     withName: QUALIMAP_BAMQC {
+        cpus   = { check_max( 6     * task.attempt, 'cpus'    ) }
+        memory = { check_max( 32.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 8.h   * task.attempt, 'time'    ) }
         publishDir = [
             path: { "${params.outdir}/QC/qualimap" },
             mode: params.publish_dir_mode,
