fixed meta id name in sort module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -84,7 +84,14 @@ process {
             path: { "${params.outdir}/preprocess/alignment" },
             mode: params.publish_dir_mode
         ]
-        ext.prefix = "sorted"
+        ext.prefix = { "${meta.id}_sorted" }
+    }
+
+    withName: SAMTOOLS_INDEX {
+        publishDir = [
+            path: { "${params.outdir}/preprocess/alignment" },
+            mode: params.publish_dir_mode
+        ]
     }
 
     withName: SAMTOOLS_VIEW_SINGLE {
