adding params.taxonomy_id in config

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,8 @@ params {
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
-    is_human                   = true
+    taxonomy_id                = null
+    is_human                   = { ${params.taxonomy_id} == "9606" ? true : false }
 
     // Run options
     aligner                    = "bwa-mem"
