--- a/conf/test.config
+++ b/conf/test.config
@@ -34,5 +34,5 @@ params {
     kronadb  = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/sarscov2/metagenome/krona_taxonomy.tab'
 
     // reporting only if Human data
-    is_human = true
+    taxonomy_id = 9606
 }
