trying to fix parameters error

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,7 @@ params {
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
     taxonomy_id                = null
-    is_human                   = { " ${params.taxonomy_id} == "9606" " ? true : false }
+    is_human                   = { "${params.taxonomy_id}" == "9606" ? true : false }
 
     // Run options
     aligner                    = "bwa-mem"
