adding containers to bamstats module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -195,6 +195,14 @@ process {
         ]
     }
 
+    withName: BAMSTATS {
+        publishDir = [
+            path: { "${params.outdir}/QC/bamstats" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
     withName: MULTIQC {
         publishDir = [
             path: { "${params.outdir}/QC/multiqc" },
