introducing bamtools stats module in hgtseq

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -203,4 +203,12 @@ process {
         ]
     }
 
+    withName: BAMTOOLS_STATS {
+        publishDir = [
+            path: { "${params.outdir}/QC/bamtools/stats" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
 }
