fixed bamtools stats meta file for Prettier

--- a/modules/nf-core/modules/bamtools/stats/meta.yml
+++ b/modules/nf-core/modules/bamtools/stats/meta.yml
@@ -1,4 +1,4 @@
-name: "bamtools_stats"
+name: bamtools_stats
 description: BamTools provides both a programmer's API and an end-user's toolkit for handling BAM files.
 keywords:
   - bamtools
