--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -36,6 +36,6 @@ params {
     kronadb  = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/sarscov2/metagenome/krona_taxonomy.tab'
 
     // reporting only if Human data
-    is_human = true
+    taxonomy_id = "9606"
 }
 
