replaced krakendb in test_full as James suggested

--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -32,7 +32,7 @@ params {
     gff             = 'https://raw.githubusercontent.com/nf-core/test-datasets/hgtseq/testdata/reference/Homo_sapiens.hg38.chr21.gff3'
 
     // Classification databases
-    krakendb = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/sarscov2/genome/db/kraken2.tar.gz'
+    krakendb = 'https://genome-idx.s3.amazonaws.com/kraken/k2_standard_16gb_20220926.tar.gz'
     kronadb  = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/sarscov2/metagenome/krona_taxonomy.tab'
 
     // reporting only if Human data
