--- a/nextflow.config
+++ b/nextflow.config
@@ -213,7 +213,7 @@ manifest {
     description     = 'A pipeline to investigate horizontal gene transfer from NGS data'
     mainScript      = 'main.nf'
     nextflowVersion = '!>=21.10.3'
-    version         = '1.0.0'
+    version = '1.1.0dev'
 }
 
 // Load modules.config for DSL2 module specific options
