added local module to correct samtools view command

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -100,6 +100,7 @@ process {
             mode: params.publish_dir_mode
         ]
         ext.args = '-b -f 5 -F 256'
+        ext.args2 = '-b -F 8'
     }
 
     withName: SAMTOOLS_VIEW_BOTH {
