--- a/nextflow.config
+++ b/nextflow.config
@@ -35,10 +35,10 @@ params {
     monochrome_logs            = false
     hook_url                   = null
     help                       = false
+    version                    = false
     validate_params            = true
     show_hidden_params         = false
     schema_ignore_params       = 'genomes'
-    enable_conda               = false
 
 
     // Config options
@@ -80,7 +80,7 @@ try {
 profiles {
     debug { process.beforeScript = 'echo $HOSTNAME' }
     conda {
-        params.enable_conda    = true
+        conda.enabled          = true
         docker.enabled         = false
         singularity.enabled    = false
         podman.enabled         = false
@@ -88,7 +88,7 @@ profiles {
         charliecloud.enabled   = false
     }
     mamba {
-        params.enable_conda    = true
+        conda.enabled          = true
         conda.useMamba         = true
         docker.enabled         = false
         singularity.enabled    = false
@@ -103,6 +103,9 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
+    }
+    arm {
+        docker.runOptions = '-u $(id -u):$(id -g) --platform=linux/amd64'
     }
     singularity {
         singularity.enabled    = true
@@ -185,12 +188,12 @@ dag {
 
 manifest {
     name            = 'nf-core/hgtseq'
-    author          = 'Simone Carpanzano, Francesco Lescai'
+    author          = """Simone Carpanzano, Francesco Lescai"""
     homePage        = 'https://github.com/nf-core/hgtseq'
-    description     = 'A pipeline to investigate horizontal gene transfer from NGS data'
+    description     = """A pipeline to investigate horizontal gene transfer from NGS data"""
     mainScript      = 'main.nf'
-    nextflowVersion = '!>=21.10.3'
-    version         = '1.0.0'
+    nextflowVersion = '!>=22.10.1'
+    version         = '1.1.0dev'
     doi             = ''
 }
 
