--- a/nextflow.config
+++ b/nextflow.config
@@ -237,7 +237,7 @@ manifest {
     description     = """A pipeline to investigate horizontal gene transfer from NGS data"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=22.10.1'
-    version         = '1.1.0dev'
+    version = '1.1.0'
     doi             = ''
 }
 
